--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>История в лицах</title>
 </head>
 <body>
-    
+    <header>Шапка</header>
+    <main>Основной контент</main>
+    <footer>Подвал</footer>
 </body>
 </html>
